--- a/PYTHON.ipynb
+++ b/PYTHON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7hJUikqA0xA404mBvkr/9",
+      "authorship_tag": "ABX9TyO4xnN4h6cu8vMl7ixTbYk1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,6 +65,48 @@
           "name": "stdout",
           "text": [
             "IX  competição de programação dá Start\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**AULA 2** ⏰ ♈ ⛪\n"
+      ],
+      "metadata": {
+        "id": "Hgz2jGpleV_G"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "livro_ficcao = 8\n",
+        "livro_n_ficcao = 10\n",
+        "livro_infantil = 6\n",
+        "pontos_rodrigo = livro_ficcao + livro_n_ficcao + livro_infantil\n",
+        "pontos_ana = 2 * livro_ficcao + 5 * livro_infantil\n",
+        "pontos_totais = pontos_rodrigo + pontos_ana\n",
+        "print(f\"Os pontos totais do Rodrigo são {pontos_rodrigo}\")\n",
+        "print(f\"Os pontos totais do ana são {pontos_ana}\")\n",
+        "print(f\"Os pontos totais do ana e Rodrigo são {pontos_totais}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5sI12wcoepYl",
+        "outputId": "8f81c883-03e5-41b2-e8db-624161461f9c"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Os pontos totais do Rodrigo são 24\n",
+            "Os pontos totais do ana são 46\n",
+            "Os pontos totais do ana e Rodrigo são 70\n"
           ]
         }
       ]
