--- a/PYTHON.ipynb
+++ b/PYTHON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4xnN4h6cu8vMl7ixTbYk1",
+      "authorship_tag": "ABX9TyMr6r1cMYzXiCqtNeCHxThM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "id": "0Vc2mvWCb0js",
         "outputId": "5766cfa0-8f63-41fd-e06c-c5be742a3308"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
         "id": "5sI12wcoepYl",
         "outputId": "8f81c883-03e5-41b2-e8db-624161461f9c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,6 +110,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#aula 3 ✈ 😇 🐾\n"
+      ],
+      "metadata": {
+        "id": "0J-J7Ck-nNTq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_de_figurinhas = int(input(\"Digite o total de figurinhas: \"))\n",
+        "numero_de_amigos = int(input(\"Digite o número de amigos: \"))\n",
+        "figurinhas_amigo = total_de_figurinhas // (numero_de_amigos + 2)"
+      ],
+      "metadata": {
+        "id": "qHUTOyczopbQ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
