--- a/PYTHON.ipynb
+++ b/PYTHON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMr6r1cMYzXiCqtNeCHxThM",
+      "authorship_tag": "ABX9TyOvE8PdF3yNHXYurq2vAbTR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,7 +114,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#aula 3 ✈ 😇 🐾\n"
+        "# **AULA** 3 ✈ 😇 🐾\n"
       ],
       "metadata": {
         "id": "0J-J7Ck-nNTq"
@@ -132,6 +132,52 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**AULA** **4** ❎ ❌ ⏪"
+      ],
+      "metadata": {
+        "id": "igrq2RiXczxL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tabuada(numero):\n",
+        "    for contador in range(1, 11):  # Gera números de 1 a 10\n",
+        "        print(f\"{numero} x {contador} = {numero * contador}\")\n",
+        "numero = int(input(\"Digite um número para ver sua tabuada: \"))\n",
+        "tabuada(numero)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_FoSK6GXh4I-",
+        "outputId": "c569facc-6137-4766-afad-30954f1ea712"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número para ver sua tabuada: 13\n",
+            "13 x 1 = 13\n",
+            "13 x 2 = 26\n",
+            "13 x 3 = 39\n",
+            "13 x 4 = 52\n",
+            "13 x 5 = 65\n",
+            "13 x 6 = 78\n",
+            "13 x 7 = 91\n",
+            "13 x 8 = 104\n",
+            "13 x 9 = 117\n",
+            "13 x 10 = 130\n"
+          ]
+        }
+      ]
     }
   ]
 }
