--- a/PYTHON.ipynb
+++ b/PYTHON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvE8PdF3yNHXYurq2vAbTR",
+      "authorship_tag": "ABX9TyMvTIK6QcsH1sK6CFnd6ciz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -147,7 +147,7 @@
       "source": [
         "def tabuada(numero):\n",
         "    for contador in range(1, 11):  # Gera números de 1 a 10\n",
-        "        print(f\"{numero} x {contador} = {numero * contador}\")\n",
+        "        print(f\"{numero} x {contador} = {numero // contador}\")\n",
         "numero = int(input(\"Digite um número para ver sua tabuada: \"))\n",
         "tabuada(numero)\n"
       ],
@@ -156,25 +156,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_FoSK6GXh4I-",
-        "outputId": "c569facc-6137-4766-afad-30954f1ea712"
+        "outputId": "d08c8330-bed4-4be1-b698-24a454b45ea4"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite um número para ver sua tabuada: 13\n",
-            "13 x 1 = 13\n",
-            "13 x 2 = 26\n",
-            "13 x 3 = 39\n",
-            "13 x 4 = 52\n",
-            "13 x 5 = 65\n",
-            "13 x 6 = 78\n",
-            "13 x 7 = 91\n",
-            "13 x 8 = 104\n",
-            "13 x 9 = 117\n",
-            "13 x 10 = 130\n"
+            "Digite um número para ver sua tabuada: 6\n",
+            "6 x 1 = 6\n",
+            "6 x 2 = 3\n",
+            "6 x 3 = 2\n",
+            "6 x 4 = 1\n",
+            "6 x 5 = 1\n",
+            "6 x 6 = 1\n",
+            "6 x 7 = 0\n",
+            "6 x 8 = 0\n",
+            "6 x 9 = 0\n",
+            "6 x 10 = 0\n"
           ]
         }
       ]
