--- a/PYTHON.ipynb
+++ b/PYTHON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMvTIK6QcsH1sK6CFnd6ciz",
+      "authorship_tag": "ABX9TyMVTLD9hU6O2vCW3Y+b0kL6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -147,7 +147,7 @@
       "source": [
         "def tabuada(numero):\n",
         "    for contador in range(1, 11):  # Gera números de 1 a 10\n",
-        "        print(f\"{numero} x {contador} = {numero // contador}\")\n",
+        "        print(f\"{numero} x {contador} = {numero * contador}\")\n",
         "numero = int(input(\"Digite um número para ver sua tabuada: \"))\n",
         "tabuada(numero)\n"
       ],
@@ -156,25 +156,116 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_FoSK6GXh4I-",
-        "outputId": "d08c8330-bed4-4be1-b698-24a454b45ea4"
+        "outputId": "e7870137-6e96-4ef0-d8d9-56bed1c6b320"
       },
-      "execution_count": 3,
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número para ver sua tabuada: 8\n",
+            "8 x 1 = 8\n",
+            "8 x 2 = 16\n",
+            "8 x 3 = 24\n",
+            "8 x 4 = 32\n",
+            "8 x 5 = 40\n",
+            "8 x 6 = 48\n",
+            "8 x 7 = 56\n",
+            "8 x 8 = 64\n",
+            "8 x 9 = 72\n",
+            "8 x 10 = 80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **AULA** **5** ✈ ❗ 0\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "nEFncgNGnQ3E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tabuada(numero):\n",
+        "    for contador in range(1, 11):  # Gera números de 1 a 10\n",
+        "        print(f\"{numero} x {contador} = {numero / contador}\")\n",
+        "numero = int(input(\"Digite um número para ver sua tabuada: \"))\n",
+        "tabuada(numero)\n"
+      ],
+      "metadata": {
+        "id": "phx_NHwOndbQ",
+        "outputId": "d3d062fc-c034-4534-ba73-4711e318f424",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Digite um número para ver sua tabuada: 6\n",
-            "6 x 1 = 6\n",
-            "6 x 2 = 3\n",
-            "6 x 3 = 2\n",
-            "6 x 4 = 1\n",
-            "6 x 5 = 1\n",
-            "6 x 6 = 1\n",
-            "6 x 7 = 0\n",
-            "6 x 8 = 0\n",
-            "6 x 9 = 0\n",
-            "6 x 10 = 0\n"
+            "6 x 1 = 6.0\n",
+            "6 x 2 = 3.0\n",
+            "6 x 3 = 2.0\n",
+            "6 x 4 = 1.5\n",
+            "6 x 5 = 1.2\n",
+            "6 x 6 = 1.0\n",
+            "6 x 7 = 0.8571428571428571\n",
+            "6 x 8 = 0.75\n",
+            "6 x 9 = 0.6666666666666666\n",
+            "6 x 10 = 0.6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **AULA** **6** **chatbot** ⛏ ✊ ⛵"
+      ],
+      "metadata": {
+        "id": "r9d06EwRnyBg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Olá, sou eu assitente virtual\")\n",
+        "nome = input(\"digite seu nome\")\n",
+        "print(f\"Olá {nome}, em que posso ajudar?\")\n",
+        "resposta = input(\"você deseja falar sobre python, javascript ou matematica:\").lower()\n",
+        "if resposta ==\"python\":\n",
+        "  print(\"Ótimo, {nome}, vamos falar sobre Python!\")\n",
+        "elif resposta ==\"matemática\":"
+      ],
+      "metadata": {
+        "id": "0LvO8XbToSpe",
+        "outputId": "b5d53f11-ae08-4543-9b60-9f29955df365",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite seu nomejoue\n",
+            "Olá, sou eu assitente virtual\n",
+            "Olá joue, em que posso ajudar?\n"
           ]
         }
       ]
