--- a/PYTHON.ipynb
+++ b/PYTHON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVTLD9hU6O2vCW3Y+b0kL6",
+      "authorship_tag": "ABX9TyOa3X1GyRQfkVW1z+nw7Zm8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -203,11 +203,11 @@
         "tabuada(numero)\n"
       ],
       "metadata": {
-        "id": "phx_NHwOndbQ",
-        "outputId": "d3d062fc-c034-4534-ba73-4711e318f424",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "phx_NHwOndbQ",
+        "outputId": "d3d062fc-c034-4534-ba73-4711e318f424"
       },
       "execution_count": 6,
       "outputs": [
@@ -242,30 +242,34 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Olá, sou eu assitente virtual\")\n",
+        "print(\"Olá, sou eu assistente virtual\")\n",
         "nome = input(\"digite seu nome\")\n",
         "print(f\"Olá {nome}, em que posso ajudar?\")\n",
         "resposta = input(\"você deseja falar sobre python, javascript ou matematica:\").lower()\n",
         "if resposta ==\"python\":\n",
-        "  print(\"Ótimo, {nome}, vamos falar sobre Python!\")\n",
-        "elif resposta ==\"matemática\":"
+        "  print(f\"Ótimo, {nome}, vamos falar sobre Python!\")\n",
+        "elif resposta ==\"matemática\":\n",
+        "   print(f\"Ótimo, {nome}, vamos falar sobre matematica!\")\n",
+        "elif resposta ==\"javascript\":\n",
+        "   print(f\"Ótimo, {nome}, vamos falar sobre javascript!\")"
       ],
       "metadata": {
-        "id": "0LvO8XbToSpe",
-        "outputId": "b5d53f11-ae08-4543-9b60-9f29955df365",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0LvO8XbToSpe",
+        "outputId": "026c80f7-7306-4a98-b587-90e84d8b087a"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "digite seu nomejoue\n",
-            "Olá, sou eu assitente virtual\n",
-            "Olá joue, em que posso ajudar?\n"
+            "Olá, sou eu assistente virtual\n",
+            "digite seu nomel\n",
+            "Olá l, em que posso ajudar?\n",
+            "você deseja falar sobre python, javascript ou matematica:matematica\n"
           ]
         }
       ]
