--- a/PYTHON.ipynb
+++ b/PYTHON.ipynb
@@ -158,7 +158,7 @@
         "id": "_FoSK6GXh4I-",
         "outputId": "e7870137-6e96-4ef0-d8d9-56bed1c6b320"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +209,7 @@
         "id": "phx_NHwOndbQ",
         "outputId": "d3d062fc-c034-4534-ba73-4711e318f424"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,18 +258,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0LvO8XbToSpe",
-        "outputId": "026c80f7-7306-4a98-b587-90e84d8b087a"
+        "outputId": "7e050fb7-081c-4069-a604-8c8f6743bc03"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Olá, sou eu assistente virtual\n",
-            "digite seu nomel\n",
-            "Olá l, em que posso ajudar?\n",
-            "você deseja falar sobre python, javascript ou matematica:matematica\n"
+            "digite seu nomej\n",
+            "Olá j, em que posso ajudar?\n",
+            "você deseja falar sobre python, javascript ou matematica:python\n",
+            "Ótimo, j, vamos falar sobre Python!\n"
           ]
         }
       ]
