--- a/PYTHON.ipynb
+++ b/PYTHON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOa3X1GyRQfkVW1z+nw7Zm8",
+      "authorship_tag": "ABX9TyOhZ9OWW3yjDpIcdeR7+EU8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -247,30 +247,31 @@
         "print(f\"Olá {nome}, em que posso ajudar?\")\n",
         "resposta = input(\"você deseja falar sobre python, javascript ou matematica:\").lower()\n",
         "if resposta ==\"python\":\n",
-        "  print(f\"Ótimo, {nome}, vamos falar sobre Python!\")\n",
+        "  print(f\"Ótimo, {nome}, vamos falar sobre Python! \\n Python é uma linguagem de programação poderosa, simples e legível, ideal para quem quer transformar ideias em código de forma rápida e elegante\")\n",
         "elif resposta ==\"matemática\":\n",
-        "   print(f\"Ótimo, {nome}, vamos falar sobre matematica!\")\n",
+        "   print(f\"Ótimo, {nome}, vamos falar sobre matematica! \\n A matemática é o alicerce invisível que sustenta toda a lógica e a beleza do universo\")\n",
         "elif resposta ==\"javascript\":\n",
-        "   print(f\"Ótimo, {nome}, vamos falar sobre javascript!\")"
+        "   print(f\"Ótimo, {nome}, vamos falar sobre javascript! \\n JavaScript é a linguagem que dá vida às páginas da web — transforma ideias estáticas em experiências dinâmicas\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0LvO8XbToSpe",
-        "outputId": "7e050fb7-081c-4069-a604-8c8f6743bc03"
+        "outputId": "26cea3fa-3bfe-4490-af99-dba7dedcc5c2"
       },
-      "execution_count": 12,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Olá, sou eu assistente virtual\n",
-            "digite seu nomej\n",
-            "Olá j, em que posso ajudar?\n",
+            "digite seu nomejo\n",
+            "Olá jo, em que posso ajudar?\n",
             "você deseja falar sobre python, javascript ou matematica:python\n",
-            "Ótimo, j, vamos falar sobre Python!\n"
+            "Ótimo, jo, vamos falar sobre Python! \n",
+            " Python é uma linguagem de programação poderosa, simples e legível, ideal para quem quer transformar ideias em código de forma rápida e elegante\n"
           ]
         }
       ]
